--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/Proyecto_Bootcamp_Frontend/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://unpkg.com/transition-style">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,16 +15,16 @@
 </head>
 <body>
     <header>
-        <a href="/index.html">
-        <img class="img-logo" src="/images/logo.webp" 
-        href="/index.html" alt="Logo" transition-style="in:polygon:opposing-corners"></a>
+        <a href="/Proyecto_Bootcamp_Frontend/index.html">
+        <img class="img-logo" src="/Proyecto_Bootcamp_Frontend/images/logo.webp" 
+        href="/Proyecto_Bootcamp_Frontend/index.html" alt="Logo" transition-style="in:polygon:opposing-corners"></a>
         <button class="abrir-menu" id="abrir"><i class="bi bi-list"></i></button>
         <nav class="nav" id="nav">
             <button class="cerrar-menu" id="cerrar"><i class="bi bi-x-circle"></i></button>
             <ul class="nav-list">
-                <li><a href="/index.html" transition-style="in:polygon:opposing-corners">Inicio</a></li>
-                <li><a href="/productos.html" transition-style="in:polygon:opposing-corners">Productos</a></li>
-                <li><a href="/quiensomos.html" transition-style="in:polygon:opposing-corners">Quienes somos</a></li>
+                <li><a href="/Proyecto_Bootcamp_Frontend/index.html" transition-style="in:polygon:opposing-corners">Inicio</a></li>
+                <li><a href="/Proyecto_Bootcamp_Frontend/productos.html" transition-style="in:polygon:opposing-corners">Productos</a></li>
+                <li><a href="/Proyecto_Bootcamp_Frontend/quiensomos.html" transition-style="in:polygon:opposing-corners">Quienes somos</a></li>
             </ul>
         </nav>
     </header>
@@ -32,7 +32,7 @@
     <section>
         <div class="container">
             <div>
-                <img class="motos" src="/images/moto2.webp" 
+                <img class="motos" src="/Proyecto_Bootcamp_Frontend/images/moto2.webp" 
                 alt="Moto1"  loading="lazy">
             </div>
             <div>
@@ -49,6 +49,6 @@
     <footer class="floor">
         <h6 class="registro"> 2023 ®  </h6>
     </footer>
-    <script src="/main.js"></script>
+    <script src="/Proyecto_Bootcamp_Frontend/main.js"></script>
 </body>
 </html>
